@@ -1,3 +1,11 @@
+2001-03-15  Bernd Schmidt  <bernds@redhat.com>
+
+	* config/ia64/ia64.c (maybe_rotate): New function, broken out of
+	ia64_sched_reorder.
+	(ia64_sched_reorder): Call maybe_rotate; also rotate after
+	scheduling a stop bit.
+	(ia64_emit_nops): Correctly handle ASMs.
+
 2001-03-15  Mark Mitchell  <mark@codesourcery.com>
 
 	* varasm.c (assemble_variable): Use DECL_RTL_SET_P.
